Fix mobile CSS bottom overflow

--- a/src/index.css
+++ b/src/index.css
@@ -57,11 +57,15 @@ body
     flex-direction: column;
 }
 
+html,body {
+    height: 100%;
+    overflow-x: hidden;
+}
+
 *
 {
     font-family: "ds_bios";
     font-size: 24px;
-    padding: 0;
     box-sizing: border-box;
 }
 
